<resources>
    <string name="app_name"> </string>
    <string name="action_settings">Settings</string>
    <string name="signin_title">Sign In</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="signin_btn">Sign In</string>
    <string name="register_btn">Register</string>
    <string name="title_activity_user_screen">Weather for Today</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="registration_title">Registration</string>
    <string name="registrationPersonName">Name</string>
    <string name="usernameText">Username</string>
    <string name="passwordTextr">Password</string>
    <string name="signup_btn">Sign Up</string>
    <string name="title_activity_test_activity">test_activity</string>
    <string name="temp_view">temp</string>
    <string name="condition_view">cond</string>
    <string name="location_view">loc</string>
    <string name="temp_text">Temperature:</string>
    <string name="condition_text">Condition:</string>
    <string name="location_text">Location:</string>
    <string name="yahoo_view">Powered by YahooAPIs</string>
</resources>
