<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.secrola.weatherbuddy2.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signin_title"
        android:id="@+id/textView_SigninTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_text"
        android:id="@+id/textView_username"
        android:layout_below="@+id/textView_SigninTitle"
        android:layout_marginTop="37dp"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_text"
        android:id="@+id/textView_passwordText"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView_username"
        android:fontFamily="sans-serif-light"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_username"
        android:layout_alignTop="@+id/textView_username"
        android:layout_toRightOf="@+id/textView_username"
        android:layout_alignRight="@+id/editText_password"
        android:layout_alignEnd="@+id/editText_password"
        android:inputType="text"
        android:fontFamily="sans-serif-light"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:layout_alignTop="@+id/textView_passwordText"
        android:layout_toRightOf="@+id/textView_passwordText"
        android:layout_toEndOf="@+id/textView_passwordText"
        android:fontFamily="sans-serif-light"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_btn"
        android:id="@+id/button_signin"
        android:layout_below="@+id/editText_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-light"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:id="@+id/button_register"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif-light"/>

</RelativeLayout>
