<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.secrola.weatherbuddy2.RegisterScreen"
    tools:showIn="@layout/activity_register_screen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registration_title"
        android:id="@+id/textView_registrationText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:textColor="#020202"
        android:fontFamily="sans-serif-light"/>

    <!-- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registrationPersonName"
        android:id="@+id/textView2"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView_registrationText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/editText_personName"
        android:layout_toStartOf="@+id/editText_personName" />
         -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usernameText"
        android:id="@+id/textView_usernameText"
        android:layout_below="@+id/textView_registrationText"
        android:textColor="#020202"
        android:fontFamily="sans-serif-light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/passwordTextr"
        android:id="@+id/textView_passwordText"
        android:layout_below="@+id/editText_username"
        android:textColor="#020202"
        android:fontFamily="sans-serif-light"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/editText_username"
        android:inputType="text"
        android:layout_below="@+id/textView_usernameText"
        android:textColor="#020202"
        android:fontFamily="sans-serif-light"/>

    <!-- <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_personName"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView_usernameText"
        android:layout_toEndOf="@+id/textView_usernameText" /> -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_password"
        android:layout_below="@+id/textView_passwordText"
        android:textColor="#020202"
        android:fontFamily="sans-serif-light"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/signup_btn"
        android:id="@+id/button_signup"
        android:layout_below="@+id/editText_password"
        android:textColor="#020202"
        android:fontFamily="sans-serif-light"/>
</RelativeLayout>
