<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.secrola.weatherbuddy2.UserScreen"
    tools:showIn="@layout/activity_user_screen"
    android:fontFamily="sans-serif-light">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/temp_view"
        android:id="@+id/temp_view"
        android:gravity="center"
        android:textSize="65sp"
        android:textColor="#020202"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_below="@+id/temp_view"
        android:layout_height="150dp"
        android:text="@string/condition_view"
        android:id="@+id/condition_view"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#020202"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_below="@+id/condition_view"
        android:layout_height="150dp"
        android:text="@string/location_view"
        android:id="@+id/location_view"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="#020202"
        android:fontFamily="sans-serif-light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/location_view"
        android:text="@string/yahoo_view"
        android:id="@+id/yahoo_view"
        android:gravity="center"
        android:textColor="#020202"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"/>

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_view"
        android:id="@+id/temp_view"
        android:textSize="24sp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condition_view"
        android:id="@+id/condition_view"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/temp_view"
        android:layout_alignStart="@+id/temp_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_view"
        android:id="@+id/location_view"
        android:textSize="24sp"
        android:layout_marginTop="45dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/condition_view"
        android:layout_alignStart="@+id/condition_view" /> -->

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temp_text"
        android:id="@+id/textView"
        android:layout_marginTop="78dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/condition_text"
        android:id="@+id/textView3"
        android:textSize="36sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="72dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/location_text"
        android:id="@+id/textView4"
        android:textSize="36sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp" /> -->
</RelativeLayout>
